--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/material": "^5.13.2",
     "next": "13.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
+    "@types/uuid": "^9.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "typescript": "5.0.4"
