--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "mongoose": "^7.2.0",
     "next": "13.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "uuid": "^9.0.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
-    "@types/uuid": "^9.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "typescript": "5.0.4"
