--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "mongoose": "^7.2.0",
     "next": "13.4.3",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
