--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "mongoose": "^7.2.0",
     "next": "13.4.3",
     "notistack": "^3.0.1",
