Renames mongodb environment variable key

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 SECRET_KEY =
-MONGO_URL  =
+MONGODB_URI  =
 
 # this is how we make environment variables available to the front end.
 # we prepend "NEXT_PUBLIC_" to the environment variable.
